added client interface
